# MidiPainter

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: windows-release.yml
docs/: algorithm-backlog.md  desktop-release-plan.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-packaging.md
midipainter/: __init__.py  cli.py  config.py
midipainter/app/: desktop.py
midipainter/image/: __init__.py  contour.py
midipainter/mapping/: __init__.py  notes.py
midipainter/midi/: __init__.py  writer.py
midipainter/pipeline/: __init__.py  convert.py
midipainter/preview/: debug.py  piano_roll.py
packaging/: pyinstaller_entry.py
packaging/windows/: MidiPainter.iss  MidiPainter.spec
scripts/: build_windows_release.ps1
tests/: test_contour.py  test_mapping.py  test_midi_writer.py  test_pipeline.py
